--- a/blog/templates/blog/statistic.html
+++ b/blog/templates/blog/statistic.html
@@ -146,7 +146,7 @@
                                     }
                                     else {
                                         if (i > 0 && i < 3){
-                                            $("#release_table_subhead").append("<th id=\"12\" scope=\"col\" style=\"min-width: 2px; font-size: 12px; padding-left: 10px; padding-right: 10px; text-align: center; font-weight: normal; background-color: #8cbcd0 \">\n" +
+                                            $("#release_table_subhead").append("<th id=\"12\" scope=\"col\" style=\"min-width: 2px; font-size: 12px;text-align: center; font-weight: normal; background-color: #8cbcd0 \">\n" +
                                         ""+release_subhead_arr[i][j]+"" +
                                         "</th>")
                                         }
