--- a/blog/templates/blog/statistic.html
+++ b/blog/templates/blog/statistic.html
@@ -24,6 +24,16 @@
                             </h1>
                         </a>
                     </div>
+                    <div class="column" style="margin-left: auto; margin-right: 0px; height: 40px; margin-top: -7px">
+                        <a class="link-hover-solid" href="{% url 'post_list' %}" style="font-size: 20px; color: white">
+                            Главная
+                        </a>
+                    </div>
+                    <div class="column" style="margin-left: 30px; margin-right: 50px; height: 40px; margin-top: -7px">
+                        <a class="link-hover-solid" href="{% url 'structure' %}" style="font-size: 20px; color: white; height: 30px">
+                            Заявки
+                        </a>
+                    </div>
                 </div>
             </div>
         <div class="content-box" style=" text-align: center">
