--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -14,13 +14,23 @@
             <div class="page-header">
                 <div class="row" style="max-height: 60px; margin-left: 0px; margin-right: 0px">
                     <div class="col-sm-1" style="max-height: 60px ;vertical-align: center; margin-left: -15px">
-                        <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 30px; margin-top: 10px">
+                        <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-top: 7px">
                     </div>
                     <div class="col-sm-5" style="max-height: 60px; margin-left: -98px">
                         <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="backMain()">
                             <h1 style="max-height: 40px; min-width: 900px">
                                 С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">управление заявками</span>
                             </h1>
+                        </a>
+                    </div>
+                    <div class="column" style="margin-left: auto; margin-right: 0px; height: 40px; margin-top: -7px">
+                        <a class="link-hover-solid" href="{% url 'post_list' %}" style="font-size: 20px; color: white">
+                            Главная
+                        </a>
+                    </div>
+                    <div class="column" style="margin-left: 30px; margin-right: 50px; height: 40px; margin-top: -7px">
+                        <a class="link-hover-solid" href="{% url 'statistic' %}" style="font-size: 20px; color: white; height: 30px">
+                            Статистика
                         </a>
                     </div>
                 </div>
