structure transer tbl weidth scroll add

--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -120,7 +120,7 @@
                                 </h1>
                                 <h1 id="mpz_tbl_head_text_first" style="margin-left: 0px; margin-top: 10px">Выберите заявку</h1>
                             </div>
-                            <table id="mpz_tbl" class=" table table-bordered"  style="margin-bottom: 30px; margin-top: -15px; width: 580px; max-width: 580px;" hidden>
+                            <table id="mpz_tbl" class=" table table-bordered"  style="margin-bottom: 30px; margin-top: -10px; width: 580px; max-width: 580px;" hidden>
                                 <thead class="">
                                     <tr style="height: 30px; background-color: #577fae;">
                                       <th scope="col" style="width: 200px; max-width: 200px; min-width: 200px; text-align: center;"><h1 id="GlobalMpzNumConnect" hidden></h1>
@@ -158,16 +158,18 @@
                             </table>
                         </div>
                         <div class="column" style="width: 650px; min-width: 650px; margin-left: 10px">
-                            <h1 id="transfer_tbl_head_text" style="margin-left: 0px; margin-top: 10px" hidden>История выдачи</h1>
+                            <h1 id="transfer_tbl_head_text" style="margin-left: 0px; margin-top: 10px; height: 20px" hidden>История выдачи</h1>
                             <h1 id="transfer_not_found" style="margin-left: 0px; margin-top: 10px" hidden>Выдача не производилась</h1>
-                            <table id="transfer_tbl" class=" table table-bordered"  style="margin-bottom: 30px;margin-top: -15px; ">
-                                <thead class="">
-                                    <tr id="transfer_tbl_thead" style="height: 30px; max-height: 30px; background-color: #577fae;">
-                                    </tr>
-                                </thead>
-                                <tbody id="transfer_tbl_body">
-                                </tbody>
-                            </table>
+                            <div class="scroll_y" style="height: 634px; overflow-x: scroll; width: 1002px">
+                                <table id="transfer_tbl" class=" table table-bordered"  style="margin-bottom: 0px; height: 617px; margin-left: -6px">
+                                    <thead class="">
+                                        <tr id="transfer_tbl_thead" style="height: 30px; max-height: 30px; background-color: #577fae;">
+                                        </tr>
+                                    </thead>
+                                    <tbody id="transfer_tbl_body">
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
