--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery.treegrid.css' %}">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="{% static 'css/animate.min.css' %}" />
     </head>
     <body>
         <div class="background-container" style="height: 961px">
@@ -16,13 +17,24 @@
             <div class="page-header">
                 <div class="row" style="max-height: 60px; margin-left: 0px; margin-right: 0px">
                     <div class="col-sm-1" style="max-height: 60px ;vertical-align: center; margin-left: -15px">
-                        <img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-top: 7px">
+                        <img src="{% static '/image/sinaps_.png' %}" alt="" class="wow animate__animated animate__rotateIn" style="visibility: visible; animation-duration: 5s;height: 45px; margin-top: 7px">
                     </div>
                     <div class="col-sm-5" style="max-height: 60px; margin-left: -98px">
                         <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="backMain()">
-                            <h1 style="max-height: 40px; min-width: 900px">
-                                С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">управление заявками</span>
-                            </h1>
+                            <div class="row" style="cursor: pointer;width: 400px" onclick="backMain()">
+                              <div class="col-sm-6" style="">
+                                   <h1 style="max-height: 40px; margin-top: 10px">
+                                        <a style="margin-left: -25px; font-family: Aeroport;height: 20px; max-height: 20px; font-size: 30px;">
+                                            С-ПЛАСТ →
+                                        </a>
+                                    </h1>
+                                </div>
+                                <div class="col-sm-5">
+                                    <h1 style="max-height: 40px; margin-top: 8px; margin-left: -35px">
+                                        <a style="margin-left: 0px; font-family: Aeroport;height: 20px; max-height: 20px; font-size: 30px;"> статистика</a>
+                                    </h1>
+                                </div>
+                            </div>
                         </a>
                     </div>
                     <div class="column" style="margin-left: auto; margin-right: 0px;  margin-top: 7px; font-family: Aeroport !important;">
@@ -494,6 +506,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script type="text/javascript" src="/static/js/jquery.treegrid.js"></script>
+        <script src="/static/js/wow.min.js"></script>
         <script type="text/javascript">
             let islogined = window.sessionStorage.getItem('islocallogined')
             if ((islogined == null)) {
