structure header fix

--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -19,19 +19,19 @@
                     <div class="col-sm-1" style="max-height: 60px ;vertical-align: center; margin-left: -15px">
                         <img src="{% static '/image/sinaps_.png' %}" alt="" class="wow animate__animated animate__rotateIn" style="visibility: visible; animation-duration: 5s;height: 45px; margin-top: 7px">
                     </div>
-                    <div class="col-sm-5" style="max-height: 60px; margin-left: -98px">
+                    <div class="col-sm-8" style="max-height: 60px; margin-left: -98px">
                         <a class="head_title" style=" cursor: pointer; margin-left: 10px; margin-top: 5px;" onclick="backMain()">
-                            <div class="row" style="cursor: pointer;width: 400px" onclick="backMain()">
-                              <div class="col-sm-6" style="">
+                            <div class="row" style="cursor: pointer;width: 800px" onclick="backMain()">
+                                <div class="column" style="margin-left: 16px">
                                    <h1 style="max-height: 40px; margin-top: 10px">
                                         <a style="margin-left: -25px; font-family: Aeroport;height: 20px; max-height: 20px; font-size: 30px;">
                                             С-ПЛАСТ →
                                         </a>
                                     </h1>
                                 </div>
-                                <div class="col-sm-5">
-                                    <h1 style="max-height: 40px; margin-top: 8px; margin-left: -35px">
-                                        <a style="margin-left: 0px; font-family: Aeroport;height: 20px; max-height: 20px; font-size: 30px;"> статистика</a>
+                                <div class="column" style="">
+                                    <h1 style="max-height: 40px; margin-top: 8px; margin-left: 8px">
+                                        <a style="margin-left: 0px; font-family: Aeroport;height: 20px; max-height: 20px; font-size: 30px;"> управление заявками</a>
                                     </h1>
                                 </div>
                             </div>
