tbl head content fix

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -75,7 +75,7 @@
                                       </th>
                                     <th scope="col" style="text-align: center; background-color: #577fae; padding: 0.1rem; padding-bottom: 13px;">
                                           <a style="font-weight: normal; color: white">
-                                            Сост. на начало
+                                            Комментарий
                                           </a>
                                       </th>
                                     </tr>
